New screen resolution
Added new adaptive layout screen resolution.

min-width: 480px, max-width: 999px

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/small-devices.css">
+    <link rel="stylesheet" href="css/very-small-devices.css">
+
 </head>
 <body>
     <header class="header">
