--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="library/iMorph.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="css/small-devices.css">
     <link rel="stylesheet" href="css/very-small-devices.css">
-
+    <link rel="stylesheet" href="css/small-devices.css">
+    <link rel="stylesheet" href="css/medium-devices.css">
 </head>
 <body>
     <header class="header">
