--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Merkury</title>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="library/iMorph.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="css/very-small-devices.css">
-    <link rel="stylesheet" href="css/small-devices.css">
-    <link rel="stylesheet" href="css/medium-devices.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/lazy.js"></script>
 </head>
